[package]
name = "rust-craft-2d"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
# bevy = "0.14.2"
bevy_rapier2d = "*"  # 适用于此游戏引擎的物理引擎
# json解析
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 噪声生成
noise = "0.9"
lazy_static = "1.5.0"
rand = "0.8.5"
# clap = "4.5.19"
once_cell = "1.10.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
lto = true
codegen-units = 1

